<resources>
    <string name="app_name">temperature_convertor</string>
    <string name="welcome1">Fahrenheit to Celsius Convertor</string>
    <string name="enterF">Enter Fahrenheit</string>
    <string name="convert">Convert</string>
    <string name="empty"> </string>
    <string name="celHint">27 ℃</string>
    <string name="kelHint">300 K</string>
    <string name="welcome2">Celsius to Fahrenheit Convertor</string>
    <string name="enterC">Enter Celsius</string>
    <string name="fahHint">32 \u2109</string>
    <string name="Goback">Go back</string>
    <string name="GoFront">Go Front</string>
</resources>