<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/night"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/welcome1"
        android:textSize="32dp"
        android:layout_weight="1.5"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12dp"
        android:autoSizeMaxTextSize="32dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/enterFahren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterF"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12dp"
        android:autoSizeMaxTextSize="32dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:autofillHints=""
        android:textAlignment="center"
        android:padding="0dp"
        android:text=""
        android:textColorHint="@color/grey"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:inputType="numberDecimal"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        style="@style/BUTTON"
        android:layout_weight="0"
        android:layout_gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/celciusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/empty"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:hint="@string/celHint"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12dp"
        android:autoSizeMaxTextSize="28dp"
        android:textSize="28dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/kelvinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text=""
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:hint="@string/kelHint"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12dp"
        android:autoSizeMaxTextSize="28dp"
        android:textSize="28dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nextButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:contentDescription="@string/GoFront"
        android:src="@drawable/next"
        android:layout_weight="0.34"
        android:padding="6dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        style="@style/BUTTON2"/>


</LinearLayout>